# nockasm

./: .gitignore  README.md  _testkit.py  nockasm.py  pyproject.toml  test_benchmarks.py  test_desk.py  test_e2e.py  test_hoon.py  test_kernel.py  test_lift.py  test_mark.py  test_nasmc.py  test_nockasm.py  test_render.py  tour.ipynb
.github/workflows/: ci.yml
benchmarks/: ackermann.nasm  add.nasm  dec.nasm  factorial.nasm  fibonacci.nasm  tests.json
desk/lib/: nockasm.hoon
desk/mar/: nasm.hoon
desk/tests/lib/: nockasm.hoon
doc/: compiler-target.md  nasm-mark.md
nasmc/: Cargo.toml  README.md  rust-toolchain.toml
nasmc/bootstrap/: nasmc.jam
nasmc/hoon/apps/nasmc/: nasmc.hoon
nasmc/hoon/lib/: nockasm.hoon
nasmc/src/: main.rs
nockasm_kernel/: __init__.py  install.py  kernel.py
tests/: _testkit.py  test_benchmarks.py  test_desk.py  test_e2e.py  test_hoon.py  test_kernel.py  test_lift.py  test_nasmc.py  test_nockasm.py  test_render.py
