[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nockasm"
version = "1.2.0"
description = "A thin macro expander from Nock Assembly to canonical Nock 4K, with a Jupyter kernel"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Sigilante", email = "davisneale@gmail.com" }]

[project.optional-dependencies]
kernel = ["ipykernel>=6.0", "pinochle>=1.2.1"]

[project.scripts]
nockasm = "nockasm:_cli"
nockasm-kernel-install = "nockasm_kernel.install:main"

[tool.hatch.build.targets.wheel]
include = [
    "nockasm.py",
    "nockasm_kernel/**",
]

# Keep the sdist to the python package: the repo also carries the Hoon
# desk, the nasmc NockApp (with a large bootstrap jam and a symlink),
# and benchmarks, none of which belong in the PyPI artifact.
[tool.hatch.build.targets.sdist]
include = [
    "/nockasm.py",
    "/nockasm_kernel",
    "/README.md",
]
